# data-science-portfolio

./: .gitignore  README.md
projects/health-readmission-risk/: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.ui  README.md  custom_transformers.py  docker-compose.yml  pyproject.toml  requirements-api.txt  requirements-dev.txt  requirements.txt
projects/health-readmission-risk/app/: main.py  model_loader.py  schemas.py
projects/health-readmission-risk/artifacts/: cv_results.csv  feature_columns.json  threshold.json  threshold_analysis.csv
projects/health-readmission-risk/artifacts/reports/logreg/: permutation_importance.csv  threshold_table.csv
projects/health-readmission-risk/artifacts/reports/rf/: permutation_importance.csv
projects/health-readmission-risk/notebooks/: 01_sql_eda.ipynb  02_modeling.ipynb  03_evaluation_interpretability.ipynb
projects/health-readmission-risk/scripts/: run_api.ps1
projects/health-readmission-risk/src/: __init__.py  data_ingest.py  train.py
projects/health-readmission-risk/src/readmission_risk/: __init__.py  custom_transformers.py
projects/health-readmission-risk/tests/: test_api.py
projects/health-readmission-risk/ui/: streamlit_app.py
projects/healthcare-outcomes/: .gitignore  README.md  sample_data.sql
sql/01_healthcare_outcomes/: README.md  analysis_queries.sql  populate_mock_data.sql  sample_data.sql  schema.sql
